--- a/serverless-cdk/package.json
+++ b/serverless-cdk/package.json
@@ -20,11 +20,12 @@
     "typescript": "~5.1.3"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.391.0",
     "aws-cdk-lib": "2.87.0",
     "aws-jwt-verify": "^4.0.0",
     "constructs": "^10.0.0",
     "dotenv": "^16.3.1",
-    "sharp": "^0.32.4",
+    "sharp": "^0.32.5",
     "source-map-support": "^0.5.21"
   }
 }
